--- a/diff_add_typing.html
+++ b/diff_add_typing.html
@@ -24,6 +24,7 @@
         const targetElement = document.getElementById('diff');
         const diff2htmlUi = new Diff2HtmlUI(targetElement);
         diff2htmlUi.fileListToggle(false);
+        diff2htmlUi.fileContentToggle();
         diff2htmlUi.synchronisedScroll();
         diff2htmlUi.highlightCode();
       });
