--- a/diff_change_heat_cool.html
+++ b/diff_change_heat_cool.html
@@ -16238,7 +16238,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">  &quot;<del>version</del>&quot;: &quot;<del>0</del>.<del>23</del>.<del>3a6</del>&quot;,</span>
+            <span class="d2h-code-line-ctn">  &quot;<del>version</del>&quot;: &quot;<del>0</del>.<del>24</del>.<del>0</del>&quot;,</span>
         </div>
     </td>
 </tr><tr>
@@ -16271,7 +16271,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">  &quot;<del>requirements</del>&quot;: [&quot;<del>https:&#x2F;&#x2F;test-files</del>.<del>pythonhosted</del>.<del>org&#x2F;packages&#x2F;53&#x2F;68&#x2F;a78f84e16282222cad5cd2a5c116dd015cd1cea3e06e4836d164ccfff155&#x2F;plugwise-0</del>.<del>19.0a10.tar.gz#plugwise==0.19.0a10</del>&quot;],</span>
+            <span class="d2h-code-line-ctn">  &quot;<del>requirements</del>&quot;: [&quot;<del>plugwise==0</del>.<del>19</del>.<del>0</del>&quot;],</span>
         </div>
     </td>
 </tr><tr>
@@ -16337,7 +16337,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">  &quot;<ins>zeroconf</ins>&quot;: [&quot;<ins>_plugwise</ins>.<ins>_tcp</ins>.<ins>local</ins>.&quot;],</span>
+            <span class="d2h-code-line-ctn">  &quot;<ins>zeroconf</ins>&quot;: [&quot;<ins>_plugwise</ins>.<ins>_tcp</ins>.<ins>local.</ins>&quot;],</span>
         </div>
     </td>
 </tr><tr>
