--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 
                         <li><a href='diff_correct_climate.html'>Unified diff core:dev vs beta:origin/correct_climate</a></li>
 
-                        <li><a href='diff_error_handling.html'>Unified diff core:dev vs beta:origin/error_handling</a></li>
-
                         <li><a href='diff_fix_250.html'>Unified diff core:dev vs beta:origin/fix_250</a></li>
+
+                        <li><a href='diff_fix_async_get_registry.html'>Unified diff core:dev vs beta:origin/fix_async_get_registry</a></li>
 
                         <li><a href='diff_homekit.html'>Unified diff core:dev vs beta:origin/homekit</a></li>
 
