--- a/diff_backup_huub66.html
+++ b/diff_backup_huub66.html
@@ -16598,7 +16598,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">  &quot;<del>version</del>&quot;: &quot;<del>0</del>.<del>25</del>.<del>2b2</del>&quot;,</span>
+            <span class="d2h-code-line-ctn">  &quot;<del>version</del>&quot;: &quot;<del>0</del>.<del>25</del>.<del>2b3</del>&quot;,</span>
         </div>
     </td>
 </tr><tr>
@@ -16631,7 +16631,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">  &quot;<del>requirements</del>&quot;: [&quot;<del>https:&#x2F;&#x2F;test-files</del>.<del>pythonhosted</del>.<del>org&#x2F;packages&#x2F;34&#x2F;b1&#x2F;6a2d879d57e888036080a2861847b03c492dbcf546820cbee6d20aae2834&#x2F;plugwise-0</del>.<del>21.0a2.tar.gz#plugwise==0.21.0a2</del>&quot;],</span>
+            <span class="d2h-code-line-ctn">  &quot;<del>requirements</del>&quot;: [&quot;<del>https:&#x2F;&#x2F;test-files</del>.<del>pythonhosted</del>.<del>org&#x2F;packages&#x2F;a7&#x2F;18&#x2F;1228b893b23014b41b2fb3061d14fe32013cbc8136682f57da4b6773d5eb&#x2F;plugwise-0</del>.<del>21.0a3.tar.gz#plugwise==0.21.0a3</del>&quot;],</span>
         </div>
     </td>
 </tr><tr>
