--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 
                         <li><a href='diff_add_typing.html'>Unified diff core:dev vs beta:origin/add_typing</a></li>
 
+                        <li><a href='diff_core_75905.html'>Unified diff core:dev vs beta:origin/core_75905</a></li>
+
                         <li><a href='diff_correct_climate.html'>Unified diff core:dev vs beta:origin/correct_climate</a></li>
 
                         <li><a href='diff_fix_250.html'>Unified diff core:dev vs beta:origin/fix_250</a></li>
