--- a/beta/diff.html
+++ b/beta/diff.html
@@ -108,7 +108,7 @@
           <path d="M6 9H3V7h3V4l5 4-5 4V9z m8-7v12c0 0.55-0.45 1-1 1H1c-0.55 0-1-0.45-1-1V2c0-0.55 0.45-1 1-1h12c0.55 0 1 0.45 1 1z m-1 0H1v12h12V2z"></path>
       </svg>      <a href="#d2h-307734" class="d2h-file-name">/home/runner/work/progress/progress/clones/beta/{ha-core/homeassistant/components → beta/custom_components}/plugwise/coordinator.py</a>
       <span class="d2h-file-stats">
-          <span class="d2h-lines-added">+50</span>
+          <span class="d2h-lines-added">+52</span>
           <span class="d2h-lines-deleted">-35</span>
       </span>
     </span>
@@ -16753,7 +16753,7 @@
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-info"></td>
     <td class="d2h-info">
-        <div class="d2h-code-side-line">@@ -60,15 +58,24 @@</div>
+        <div class="d2h-code-side-line">@@ -60,34 +58,53 @@</div>
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-cntx">
@@ -16996,9 +16996,34 @@
         </div>
     </td>
 </tr><tr>
-    <td class="d2h-code-side-linenumber d2h-info"></td>
-    <td class="d2h-info">
-        <div class="d2h-code-side-line">@@ -76,18 +83,26 @@</div>
+    <td class="d2h-code-side-linenumber d2h-code-side-emptyplaceholder d2h-cntx d2h-emptyplaceholder">
+      
+    </td>
+    <td class="d2h-cntx d2h-emptyplaceholder">
+        <div class="d2h-code-side-line d2h-code-side-emptyplaceholder">
+            <span class="d2h-code-line-prefix">&nbsp;</span>
+            <span class="d2h-code-line-ctn"><br></span>
+        </div>
+    </td>
+</tr><tr>
+    <td class="d2h-code-side-linenumber d2h-code-side-emptyplaceholder d2h-cntx d2h-emptyplaceholder">
+      
+    </td>
+    <td class="d2h-cntx d2h-emptyplaceholder">
+        <div class="d2h-code-side-line d2h-code-side-emptyplaceholder">
+            <span class="d2h-code-line-prefix">&nbsp;</span>
+            <span class="d2h-code-line-ctn"><br></span>
+        </div>
+    </td>
+</tr><tr>
+    <td class="d2h-code-side-linenumber d2h-cntx">
+      75
+    </td>
+    <td class="d2h-cntx">
+        <div class="d2h-code-side-line">
+            <span class="d2h-code-line-prefix">&nbsp;</span>
+            <span class="d2h-code-line-ctn">        try:</span>
+        </div>
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-cntx">
@@ -18210,18 +18235,23 @@
         </div>
     </td>
 </tr><tr>
-    <td class="d2h-code-side-linenumber d2h-info"></td>
-    <td class="d2h-info">
-        <div class="d2h-code-side-line">&nbsp;</div>
+    <td class="d2h-code-side-linenumber d2h-ins">
+      82
+    </td>
+    <td class="d2h-ins">
+        <div class="d2h-code-side-line">
+            <span class="d2h-code-line-prefix">+</span>
+            <span class="d2h-code-line-ctn">        data: PlugwiseData = {&quot;gateway&quot;: {}, &quot;devices&quot;: {}}</span>
+        </div>
     </td>
 </tr><tr>
-    <td class="d2h-code-side-linenumber d2h-cntx">
+    <td class="d2h-code-side-linenumber d2h-ins">
       83
     </td>
-    <td class="d2h-cntx">
+    <td class="d2h-ins">
         <div class="d2h-code-side-line">
-            <span class="d2h-code-line-prefix">&nbsp;</span>
-            <span class="d2h-code-line-ctn">            if not self._connected:</span>
+            <span class="d2h-code-line-prefix">+</span>
+            <span class="d2h-code-line-ctn"><br></span>
         </div>
     </td>
 </tr><tr>
@@ -18231,7 +18261,7 @@
     <td class="d2h-cntx">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">&nbsp;</span>
-            <span class="d2h-code-line-ctn">                await self._connect()</span>
+            <span class="d2h-code-line-ctn">        try:</span>
         </div>
     </td>
 </tr><tr>
@@ -18241,27 +18271,27 @@
     <td class="d2h-cntx">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">&nbsp;</span>
-            <span class="d2h-code-line-ctn">            data = await self.api.async_update()</span>
+            <span class="d2h-code-line-ctn">            if not self._connected:</span>
         </div>
     </td>
 </tr><tr>
-    <td class="d2h-code-side-linenumber d2h-ins">
+    <td class="d2h-code-side-linenumber d2h-cntx">
       86
     </td>
-    <td class="d2h-ins">
+    <td class="d2h-cntx">
         <div class="d2h-code-side-line">
-            <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">            LOGGER.debug(f&quot;{self.api.smile_name} data: %s&quot;, data)</span>
+            <span class="d2h-code-line-prefix">&nbsp;</span>
+            <span class="d2h-code-line-ctn">                await self._connect()</span>
         </div>
     </td>
 </tr><tr>
-    <td class="d2h-code-side-linenumber d2h-ins">
+    <td class="d2h-code-side-linenumber d2h-cntx">
       87
     </td>
-    <td class="d2h-ins">
+    <td class="d2h-cntx">
         <div class="d2h-code-side-line">
-            <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">            if self._unavailable_logged:</span>
+            <span class="d2h-code-line-prefix">&nbsp;</span>
+            <span class="d2h-code-line-ctn">            data = await self.api.async_update()</span>
         </div>
     </td>
 </tr><tr>
@@ -18271,12 +18301,32 @@
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
+            <span class="d2h-code-line-ctn">            LOGGER.debug(f&quot;{self.api.smile_name} data: %s&quot;, data)</span>
+        </div>
+    </td>
+</tr><tr>
+    <td class="d2h-code-side-linenumber d2h-ins">
+      89
+    </td>
+    <td class="d2h-ins">
+        <div class="d2h-code-side-line">
+            <span class="d2h-code-line-prefix">+</span>
+            <span class="d2h-code-line-ctn">            if self._unavailable_logged:</span>
+        </div>
+    </td>
+</tr><tr>
+    <td class="d2h-code-side-linenumber d2h-ins">
+      90
+    </td>
+    <td class="d2h-ins">
+        <div class="d2h-code-side-line">
+            <span class="d2h-code-line-prefix">+</span>
             <span class="d2h-code-line-ctn">                self._unavailable_logged = False</span>
         </div>
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-cntx">
-      89
+      91
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-side-line">
@@ -18286,7 +18336,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-ins d2h-change">
-      90
+      92
     </td>
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-side-line">
@@ -18296,7 +18346,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-ins">
-      91
+      93
     </td>
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
@@ -18306,7 +18356,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-ins">
-      92
+      94
     </td>
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
@@ -18316,7 +18366,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-cntx">
-      93
+      95
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-side-line">
@@ -18326,7 +18376,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-ins d2h-change">
-      94
+      96
     </td>
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-side-line">
@@ -18336,7 +18386,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-ins d2h-change">
-      95
+      97
     </td>
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-side-line">
@@ -18346,7 +18396,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-ins d2h-change">
-      96
+      98
     </td>
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-side-line">
@@ -18356,7 +18406,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-ins d2h-change">
-      97
+      99
     </td>
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-side-line">
@@ -18366,7 +18416,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-ins">
-      98
+      100
     </td>
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
@@ -18376,7 +18426,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-cntx">
-      99
+      101
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-side-line">
@@ -18386,7 +18436,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-ins d2h-change">
-      100
+      102
     </td>
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-side-line">
@@ -18396,7 +18446,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-ins">
-      101
+      103
     </td>
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
@@ -18406,7 +18456,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-ins">
-      102
+      104
     </td>
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
@@ -18416,7 +18466,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-cntx">
-      103
+      105
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-side-line">
@@ -18426,7 +18476,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-ins d2h-change">
-      104
+      106
     </td>
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-side-line">
@@ -18436,7 +18486,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-ins d2h-change">
-      105
+      107
     </td>
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-side-line">
@@ -18446,7 +18496,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-ins d2h-change">
-      106
+      108
     </td>
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-side-line">
@@ -18456,7 +18506,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-ins d2h-change">
-      107
+      109
     </td>
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-side-line">
@@ -18466,7 +18516,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-ins d2h-change">
-      108
+      110
     </td>
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-side-line">
