--- a/beta/diff_prepare_typing2.html
+++ b/beta/diff_prepare_typing2.html
@@ -109,7 +109,7 @@
       </svg>      <a href="#d2h-561020" class="d2h-file-name">/home/runner/work/progress/progress/clones/beta/{beta/custom_components → ha-core/homeassistant/components}/plugwise/coordinator.py</a>
       <span class="d2h-file-stats">
           <span class="d2h-lines-added">+35</span>
-          <span class="d2h-lines-deleted">-50</span>
+          <span class="d2h-lines-deleted">-52</span>
       </span>
     </span>
 </li>
@@ -16498,7 +16498,7 @@
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-info"></td>
     <td class="d2h-info">
-        <div class="d2h-code-side-line">@@ -58,24 +60,15 @@</div>
+        <div class="d2h-code-side-line">@@ -58,53 +60,34 @@</div>
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-cntx">
@@ -16741,18 +16741,23 @@
         </div>
     </td>
 </tr><tr>
-    <td class="d2h-code-side-linenumber d2h-info"></td>
-    <td class="d2h-info">
-        <div class="d2h-code-side-line">@@ -83,26 +76,18 @@</div>
+    <td class="d2h-code-side-linenumber d2h-del">
+      82
+    </td>
+    <td class="d2h-del">
+        <div class="d2h-code-side-line">
+            <span class="d2h-code-line-prefix">-</span>
+            <span class="d2h-code-line-ctn">        data: PlugwiseData = {&quot;gateway&quot;: {}, &quot;devices&quot;: {}}</span>
+        </div>
     </td>
 </tr><tr>
-    <td class="d2h-code-side-linenumber d2h-cntx">
+    <td class="d2h-code-side-linenumber d2h-del">
       83
     </td>
-    <td class="d2h-cntx">
+    <td class="d2h-del">
         <div class="d2h-code-side-line">
-            <span class="d2h-code-line-prefix">&nbsp;</span>
-            <span class="d2h-code-line-ctn">            if not self._connected:</span>
+            <span class="d2h-code-line-prefix">-</span>
+            <span class="d2h-code-line-ctn"><br></span>
         </div>
     </td>
 </tr><tr>
@@ -16762,7 +16767,7 @@
     <td class="d2h-cntx">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">&nbsp;</span>
-            <span class="d2h-code-line-ctn">                await self._connect()</span>
+            <span class="d2h-code-line-ctn">        try:</span>
         </div>
     </td>
 </tr><tr>
@@ -16772,27 +16777,27 @@
     <td class="d2h-cntx">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">&nbsp;</span>
-            <span class="d2h-code-line-ctn">            data = await self.api.async_update()</span>
+            <span class="d2h-code-line-ctn">            if not self._connected:</span>
         </div>
     </td>
 </tr><tr>
-    <td class="d2h-code-side-linenumber d2h-del">
+    <td class="d2h-code-side-linenumber d2h-cntx">
       86
     </td>
-    <td class="d2h-del">
+    <td class="d2h-cntx">
         <div class="d2h-code-side-line">
-            <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">            LOGGER.debug(f&quot;{self.api.smile_name} data: %s&quot;, data)</span>
+            <span class="d2h-code-line-prefix">&nbsp;</span>
+            <span class="d2h-code-line-ctn">                await self._connect()</span>
         </div>
     </td>
 </tr><tr>
-    <td class="d2h-code-side-linenumber d2h-del">
+    <td class="d2h-code-side-linenumber d2h-cntx">
       87
     </td>
-    <td class="d2h-del">
+    <td class="d2h-cntx">
         <div class="d2h-code-side-line">
-            <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">            if self._unavailable_logged:</span>
+            <span class="d2h-code-line-prefix">&nbsp;</span>
+            <span class="d2h-code-line-ctn">            data = await self.api.async_update()</span>
         </div>
     </td>
 </tr><tr>
@@ -16802,12 +16807,32 @@
     <td class="d2h-del">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
+            <span class="d2h-code-line-ctn">            LOGGER.debug(f&quot;{self.api.smile_name} data: %s&quot;, data)</span>
+        </div>
+    </td>
+</tr><tr>
+    <td class="d2h-code-side-linenumber d2h-del">
+      89
+    </td>
+    <td class="d2h-del">
+        <div class="d2h-code-side-line">
+            <span class="d2h-code-line-prefix">-</span>
+            <span class="d2h-code-line-ctn">            if self._unavailable_logged:</span>
+        </div>
+    </td>
+</tr><tr>
+    <td class="d2h-code-side-linenumber d2h-del">
+      90
+    </td>
+    <td class="d2h-del">
+        <div class="d2h-code-side-line">
+            <span class="d2h-code-line-prefix">-</span>
             <span class="d2h-code-line-ctn">                self._unavailable_logged = False</span>
         </div>
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-cntx">
-      89
+      91
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-side-line">
@@ -16817,7 +16842,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-del d2h-change">
-      90
+      92
     </td>
     <td class="d2h-del d2h-change">
         <div class="d2h-code-side-line">
@@ -16827,7 +16852,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-del">
-      91
+      93
     </td>
     <td class="d2h-del">
         <div class="d2h-code-side-line">
@@ -16837,7 +16862,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-del">
-      92
+      94
     </td>
     <td class="d2h-del">
         <div class="d2h-code-side-line">
@@ -16847,7 +16872,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-cntx">
-      93
+      95
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-side-line">
@@ -16857,7 +16882,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-del d2h-change">
-      94
+      96
     </td>
     <td class="d2h-del d2h-change">
         <div class="d2h-code-side-line">
@@ -16867,7 +16892,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-del d2h-change">
-      95
+      97
     </td>
     <td class="d2h-del d2h-change">
         <div class="d2h-code-side-line">
@@ -16877,7 +16902,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-del d2h-change">
-      96
+      98
     </td>
     <td class="d2h-del d2h-change">
         <div class="d2h-code-side-line">
@@ -16887,7 +16912,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-del d2h-change">
-      97
+      99
     </td>
     <td class="d2h-del d2h-change">
         <div class="d2h-code-side-line">
@@ -16897,7 +16922,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-del">
-      98
+      100
     </td>
     <td class="d2h-del">
         <div class="d2h-code-side-line">
@@ -16907,7 +16932,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-cntx">
-      99
+      101
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-side-line">
@@ -16917,7 +16942,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-del d2h-change">
-      100
+      102
     </td>
     <td class="d2h-del d2h-change">
         <div class="d2h-code-side-line">
@@ -16927,7 +16952,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-del">
-      101
+      103
     </td>
     <td class="d2h-del">
         <div class="d2h-code-side-line">
@@ -16937,7 +16962,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-del">
-      102
+      104
     </td>
     <td class="d2h-del">
         <div class="d2h-code-side-line">
@@ -16947,7 +16972,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-cntx">
-      103
+      105
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-side-line">
@@ -16957,7 +16982,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-del d2h-change">
-      104
+      106
     </td>
     <td class="d2h-del d2h-change">
         <div class="d2h-code-side-line">
@@ -16967,7 +16992,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-del d2h-change">
-      105
+      107
     </td>
     <td class="d2h-del d2h-change">
         <div class="d2h-code-side-line">
@@ -16977,7 +17002,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-del d2h-change">
-      106
+      108
     </td>
     <td class="d2h-del d2h-change">
         <div class="d2h-code-side-line">
@@ -16987,7 +17012,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-del d2h-change">
-      107
+      109
     </td>
     <td class="d2h-del d2h-change">
         <div class="d2h-code-side-line">
@@ -16997,7 +17022,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-del d2h-change">
-      108
+      110
     </td>
     <td class="d2h-del d2h-change">
         <div class="d2h-code-side-line">
@@ -17920,9 +17945,34 @@
         </div>
     </td>
 </tr><tr>
-    <td class="d2h-code-side-linenumber d2h-info"></td>
-    <td class="d2h-info">
-        <div class="d2h-code-side-line">&nbsp;</div>
+    <td class="d2h-code-side-linenumber d2h-code-side-emptyplaceholder d2h-cntx d2h-emptyplaceholder">
+      
+    </td>
+    <td class="d2h-cntx d2h-emptyplaceholder">
+        <div class="d2h-code-side-line d2h-code-side-emptyplaceholder">
+            <span class="d2h-code-line-prefix">&nbsp;</span>
+            <span class="d2h-code-line-ctn"><br></span>
+        </div>
+    </td>
+</tr><tr>
+    <td class="d2h-code-side-linenumber d2h-code-side-emptyplaceholder d2h-cntx d2h-emptyplaceholder">
+      
+    </td>
+    <td class="d2h-cntx d2h-emptyplaceholder">
+        <div class="d2h-code-side-line d2h-code-side-emptyplaceholder">
+            <span class="d2h-code-line-prefix">&nbsp;</span>
+            <span class="d2h-code-line-ctn"><br></span>
+        </div>
+    </td>
+</tr><tr>
+    <td class="d2h-code-side-linenumber d2h-cntx">
+      75
+    </td>
+    <td class="d2h-cntx">
+        <div class="d2h-code-side-line">
+            <span class="d2h-code-line-prefix">&nbsp;</span>
+            <span class="d2h-code-line-ctn">        try:</span>
+        </div>
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-cntx">
